# amzn-bedrock-demo

./: README.md  hello.py  main.py  pyproject.toml
amzn_bedrock_demo/: agent.py  market_history.py  model.py  tools.py  util.py
amzn_bedrock_demo/data/: market_history.csv
