[project]
name = "amzn-bedrock-demo"
version = "0.1.0"
description = "Demo of Amazon Bedrock and Agentic concepts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.36.10",
    "boto3-stubs[bedrock,bedrock-runtime,essential]>=1.36.10",
    "pydantic>=2.10.6",
    "structlog>=25.1.0",
]
